--- a/homework/hw0/hw0.ipynb
+++ b/homework/hw0/hw0.ipynb
@@ -5,8 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:08:23.140130Z",
-     "start_time": "2024-09-23T01:08:22.646482Z"
+     "end_time": "2024-09-23T07:17:43.435810Z",
+     "start_time": "2024-09-23T07:17:43.432670Z"
     }
    },
    "source": [
@@ -14,15 +14,15 @@
     "pd.set_option('display.max_rows', None)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 63
   },
   {
    "cell_type": "code",
    "id": "ada41bbff39e1dc9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:08:26.215717Z",
-     "start_time": "2024-09-23T01:08:23.177996Z"
+     "end_time": "2024-09-23T07:17:46.235770Z",
+     "start_time": "2024-09-23T07:17:43.444817Z"
     }
    },
    "source": [
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_8072\\3815970306.py:1: DtypeWarning: Columns (17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_1576\\3815970306.py:1: DtypeWarning: Columns (17,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"./data/hw0_dataset_1M.csv\", names = [i for i in range(0,30)])\n"
      ]
     },
@@ -233,35 +233,35 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 64
   },
   {
    "cell_type": "code",
    "id": "a57994cf12e381c8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:09:48.700103Z",
-     "start_time": "2024-09-23T01:09:48.661114Z"
+     "end_time": "2024-09-23T07:19:03.239709Z",
+     "start_time": "2024-09-23T07:19:03.204707Z"
     }
    },
    "source": [
     "indexs = df[df.iloc[:,1] == 'key'].index"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 65
   },
   {
    "cell_type": "code",
    "id": "1816b21d000755ed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:09:48.718858Z",
-     "start_time": "2024-09-23T01:09:48.713189Z"
+     "end_time": "2024-09-23T07:19:03.249006Z",
+     "start_time": "2024-09-23T07:19:03.244716Z"
     }
    },
    "source": [
@@ -277,20 +277,20 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 66
   },
   {
    "cell_type": "code",
    "id": "9eb340ba62f505bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:13:15.320086Z",
-     "start_time": "2024-09-23T01:13:15.310020Z"
+     "end_time": "2024-09-23T07:20:20.090452Z",
+     "start_time": "2024-09-23T07:20:20.086771Z"
     }
    },
    "source": [
@@ -305,15 +305,15 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 67
   },
   {
    "cell_type": "code",
    "id": "231507dea0050231",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:14:51.473856Z",
-     "start_time": "2024-09-23T01:14:51.465830Z"
+     "end_time": "2024-09-23T07:21:37.344495Z",
+     "start_time": "2024-09-23T07:21:37.337861Z"
     }
    },
    "source": [
@@ -325,15 +325,15 @@
     "        lowsize = df.iloc[x].notna().sum()"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 68
   },
   {
    "cell_type": "code",
    "id": "2d9b34ab-bd73-4184-8b82-45c29ba0ea49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:14:51.484890Z",
-     "start_time": "2024-09-23T01:14:51.481862Z"
+     "end_time": "2024-09-23T07:22:54.032060Z",
+     "start_time": "2024-09-23T07:22:54.025517Z"
     }
    },
    "source": [
@@ -348,42 +348,75 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-23T07:24:10.729370Z",
+     "start_time": "2024-09-23T07:24:10.725873Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "headers = df.iloc[low]\n",
+    "df = df[1:]\n",
+    "df.columns = headers"
+   ],
+   "id": "b36289a59c6bfdd4",
+   "outputs": [],
+   "execution_count": 70
   },
   {
    "cell_type": "code",
    "id": "390182b4-517c-4153-a5ff-519801e04eb1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T01:22:42.658853Z",
-     "start_time": "2024-09-23T01:22:42.554634Z"
+     "end_time": "2024-09-23T07:25:28.007180Z",
+     "start_time": "2024-09-23T07:25:27.898660Z"
     }
    },
-   "source": "df.iloc[:,1:lowsize+1].head()",
+   "source": "df = df.iloc[:,1:lowsize+1].head()",
+   "outputs": [],
+   "execution_count": 71
+  },
+  {
+   "cell_type": "code",
+   "id": "b8a3adb7-d4d4-494f-a3e6-cf37499e69cf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-23T07:25:28.096394Z",
+     "start_time": "2024-09-23T07:25:28.019893Z"
+    }
+   },
+   "source": [
+    "df = df.rename_axis(None, axis=1)\n",
+    "df.head()"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "            1                2                        3           4   \\\n",
-       "0          key  doi-asserted-by                      DOI  first-page   \n",
-       "1  e_1_2_7_2_1        publisher         10.1038/35041545         NaN   \n",
-       "2  e_1_2_7_3_1        publisher  10.1126/science.1155121         NaN   \n",
-       "3  e_1_2_7_4_1        publisher    10.1007/s003820050007         NaN   \n",
-       "4  e_1_2_7_5_1        publisher     10.1029/2000GL012471         NaN   \n",
+       "           key doi-asserted-by               first-page  DOI article-title  \\\n",
+       "1  e_1_2_7_2_1       publisher         10.1038/35041545  NaN           NaN   \n",
+       "2  e_1_2_7_3_1       publisher  10.1126/science.1155121  NaN           NaN   \n",
+       "3  e_1_2_7_4_1       publisher    10.1007/s003820050007  NaN           NaN   \n",
+       "4  e_1_2_7_5_1       publisher     10.1029/2000GL012471  NaN           NaN   \n",
+       "5  e_1_2_7_6_1       publisher     10.1029/2007GL029678  NaN           NaN   \n",
        "\n",
-       "             5       6     7       8              9      10            11  \\\n",
-       "0  volume-title  author  year  volume  journal-title  issue  series-title   \n",
-       "1           NaN     NaN   NaN     NaN            NaN    NaN           NaN   \n",
-       "2           NaN     NaN   NaN     NaN            NaN    NaN           NaN   \n",
-       "3           NaN     NaN   NaN     NaN            NaN    NaN           NaN   \n",
-       "4           NaN     NaN   NaN     NaN            NaN    NaN           NaN   \n",
+       "  volume author year journal-title unstructured issue series-title  \\\n",
+       "1    NaN    NaN  NaN           NaN          NaN   NaN          NaN   \n",
+       "2    NaN    NaN  NaN           NaN          NaN   NaN          NaN   \n",
+       "3    NaN    NaN  NaN           NaN          NaN   NaN          NaN   \n",
+       "4    NaN    NaN  NaN           NaN          NaN   NaN          NaN   \n",
+       "5    NaN    NaN  NaN           NaN          NaN   NaN          NaN   \n",
        "\n",
-       "             12             13    14         15       16   17   18  \n",
-       "0  unstructured  article-title  ISSN  issn-type  edition  NaN  NaN  \n",
-       "1           NaN            NaN   NaN        NaN      NaN  NaN  NaN  \n",
-       "2           NaN            NaN   NaN        NaN      NaN  NaN  NaN  \n",
-       "3           NaN            NaN   NaN        NaN      NaN  NaN  NaN  \n",
-       "4           NaN            NaN   NaN        NaN      NaN  NaN  NaN  "
+       "  volume-title edition ISSN issn-type isbn-type ISBN  \n",
+       "1          NaN     NaN  NaN       NaN       NaN  NaN  \n",
+       "2          NaN     NaN  NaN       NaN       NaN  NaN  \n",
+       "3          NaN     NaN  NaN       NaN       NaN  NaN  \n",
+       "4          NaN     NaN  NaN       NaN       NaN  NaN  \n",
+       "5          NaN     NaN  NaN       NaN       NaN  NaN  "
       ],
       "text/html": [
        "<div>\n",
@@ -404,48 +437,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
+       "      <th>key</th>\n",
+       "      <th>doi-asserted-by</th>\n",
+       "      <th>first-page</th>\n",
+       "      <th>DOI</th>\n",
+       "      <th>article-title</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "      <th>journal-title</th>\n",
+       "      <th>unstructured</th>\n",
+       "      <th>issue</th>\n",
+       "      <th>series-title</th>\n",
+       "      <th>volume-title</th>\n",
+       "      <th>edition</th>\n",
+       "      <th>ISSN</th>\n",
+       "      <th>issn-type</th>\n",
+       "      <th>isbn-type</th>\n",
+       "      <th>ISBN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>key</td>\n",
-       "      <td>doi-asserted-by</td>\n",
-       "      <td>DOI</td>\n",
-       "      <td>first-page</td>\n",
-       "      <td>volume-title</td>\n",
-       "      <td>author</td>\n",
-       "      <td>year</td>\n",
-       "      <td>volume</td>\n",
-       "      <td>journal-title</td>\n",
-       "      <td>issue</td>\n",
-       "      <td>series-title</td>\n",
-       "      <td>unstructured</td>\n",
-       "      <td>article-title</td>\n",
-       "      <td>ISSN</td>\n",
-       "      <td>issn-type</td>\n",
-       "      <td>edition</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>e_1_2_7_2_1</td>\n",
@@ -530,33 +542,64 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>e_1_2_7_6_1</td>\n",
+       "      <td>publisher</td>\n",
+       "      <td>10.1029/2007GL029678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 72
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-23T07:25:28.135379Z",
+     "start_time": "2024-09-23T07:25:28.133184Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b8a3adb7-d4d4-494f-a3e6-cf37499e69cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "b8f75c3d95b4e46c"
+   "id": "b8f75c3d95b4e46c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-23T07:25:28.183085Z",
+     "start_time": "2024-09-23T07:25:28.180842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "6206fae7eef872b0",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
