--- a/homework/hw0/hw0.ipynb
+++ b/homework/hw0/hw0.ipynb
@@ -380,8 +380,7 @@
     "rowData = []\n",
     "for x in range(1,len(index)):\n",
     "    dfx = df.iloc[:index[x],:]\n",
-    "    rowData += [dfx]\n",
-    "    break"
+    "    rowData += [dfx]"
    ],
    "id": "842b9d1510783a3b",
    "outputs": [],
