--- a/homework/hw0/hw0.ipynb
+++ b/homework/hw0/hw0.ipynb
@@ -1079,16 +1079,103 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-24T19:52:41.619630Z",
-     "start_time": "2024-09-24T19:52:41.616768Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "df_final = holDf[['DOI','journal-title','doi-asserted-by']]",
    "id": "4f5318beb76e339",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-24T20:44:50.635519Z",
+     "start_time": "2024-09-24T20:44:50.628384Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_final.head()",
+   "id": "878f0ab6be823a04",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                       DOI journal-title doi-asserted-by\n",
+       "1         10.1038/35041545           NaN       publisher\n",
+       "2  10.1126/science.1155121           NaN       publisher\n",
+       "3    10.1007/s003820050007           NaN       publisher\n",
+       "4     10.1029/2000GL012471           NaN       publisher\n",
+       "5     10.1029/2007GL029678           NaN       publisher"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DOI</th>\n",
+       "      <th>journal-title</th>\n",
+       "      <th>doi-asserted-by</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.1038/35041545</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>publisher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.1126/science.1155121</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>publisher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.1007/s003820050007</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>publisher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.1029/2000GL012471</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>publisher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10.1029/2007GL029678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>publisher</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 56
   },
   {
    "metadata": {},
@@ -1096,7 +1183,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "878f0ab6be823a04"
+   "id": "2f15f2e380a00e2"
   }
  ],
  "metadata": {
