--- a/homework/hw1/hw1.ipynb
+++ b/homework/hw1/hw1.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    }
    },
+   "source": "!tar xvzf en.openfoodfacts.products.cookies.csv.tar.gz",
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1f4e376b71efa055"
   }
  ],
  "metadata": {
