--- a/homework/hw1/hw1.ipynb
+++ b/homework/hw1/hw1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:28.620095Z",
-     "start_time": "2024-11-13T07:49:28.403259Z"
+     "end_time": "2024-11-13T17:18:35.191013Z",
+     "start_time": "2024-11-13T17:18:34.963129Z"
     }
    },
    "source": "!tar xvzf en.openfoodfacts.products.cookies.tar.gz",
@@ -20,13 +20,13 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:28.629608Z",
-     "start_time": "2024-11-13T07:49:28.626615Z"
+     "end_time": "2024-11-13T17:18:35.205994Z",
+     "start_time": "2024-11-13T17:18:35.202542Z"
     }
    },
    "cell_type": "code",
@@ -36,13 +36,13 @@
    ],
    "id": "1f4e376b71efa055",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:30.076594Z",
-     "start_time": "2024-11-13T07:49:28.656304Z"
+     "end_time": "2024-11-13T17:18:36.602111Z",
+     "start_time": "2024-11-13T17:18:35.236391Z"
     }
    },
    "cell_type": "code",
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_18044\\3209091146.py:1: DtypeWarning: Columns (0,11,17,31,32,33,35,67) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_9612\\3209091146.py:1: DtypeWarning: Columns (0,11,17,31,32,33,35,67) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"en.openfoodfacts.products.cookies.csv\", on_bad_lines='skip',header=0,delimiter=\"\\t\")\n"
      ]
     },
@@ -276,18 +276,18 @@
        "</div>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 67
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:30.175165Z",
-     "start_time": "2024-11-13T07:49:30.155129Z"
+     "end_time": "2024-11-13T17:18:36.702122Z",
+     "start_time": "2024-11-13T17:18:36.684570Z"
     }
    },
    "cell_type": "code",
@@ -506,18 +506,18 @@
        "</div>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:30.323677Z",
-     "start_time": "2024-11-13T07:49:30.305318Z"
+     "end_time": "2024-11-13T17:18:36.940253Z",
+     "start_time": "2024-11-13T17:18:36.923737Z"
     }
    },
    "cell_type": "code",
@@ -737,18 +737,18 @@
        "</div>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:30.707718Z",
-     "start_time": "2024-11-13T07:49:30.690856Z"
+     "end_time": "2024-11-13T17:18:37.090481Z",
+     "start_time": "2024-11-13T17:18:37.075338Z"
     }
    },
    "cell_type": "code",
@@ -967,18 +967,18 @@
        "</div>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:30.822384Z",
-     "start_time": "2024-11-13T07:49:30.806113Z"
+     "end_time": "2024-11-13T17:18:37.267413Z",
+     "start_time": "2024-11-13T17:18:37.247123Z"
     }
    },
    "cell_type": "code",
@@ -1197,31 +1197,31 @@
        "</div>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:31.033307Z",
-     "start_time": "2024-11-13T07:49:30.990417Z"
+     "end_time": "2024-11-13T17:18:37.455338Z",
+     "start_time": "2024-11-13T17:18:37.413681Z"
     }
    },
    "cell_type": "code",
    "source": "df5.to_csv(\"cookies.data-filtered.csv\")",
    "id": "10da7d8fbb640218",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:31.236590Z",
-     "start_time": "2024-11-13T07:49:31.137450Z"
+     "end_time": "2024-11-13T17:18:37.717110Z",
+     "start_time": "2024-11-13T17:18:37.605815Z"
     }
    },
    "cell_type": "code",
@@ -1237,7 +1237,7 @@
        "<Axes: xlabel='countries_en'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1252,13 +1252,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 73
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:31.466522Z",
-     "start_time": "2024-11-13T07:49:31.368866Z"
+     "end_time": "2024-11-13T17:18:37.872776Z",
+     "start_time": "2024-11-13T17:18:37.782717Z"
     }
    },
    "cell_type": "code",
@@ -1274,7 +1274,7 @@
        "<Axes: xlabel='completeness'>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1289,13 +1289,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 74
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:31.538012Z",
-     "start_time": "2024-11-13T07:49:31.516072Z"
+     "end_time": "2024-11-13T17:18:37.921706Z",
+     "start_time": "2024-11-13T17:18:37.902458Z"
     }
    },
    "cell_type": "code",
@@ -1312,19 +1312,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_18044\\137456979.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_9612\\137456979.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df5['serving_size'] = df5['serving_size'].str.replace('g','')\n",
-      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_18044\\137456979.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_9612\\137456979.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df5['serving_size'] = df5['serving_size'].str.replace(',','.')\n",
-      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_18044\\137456979.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\khodg\\AppData\\Local\\Temp\\ipykernel_9612\\137456979.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1541,18 +1541,18 @@
        "</div>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:49:31.674603Z",
-     "start_time": "2024-11-13T07:49:31.670362Z"
+     "end_time": "2024-11-13T17:18:37.984644Z",
+     "start_time": "2024-11-13T17:18:37.980131Z"
     }
    },
    "cell_type": "code",
@@ -1565,18 +1565,18 @@
        "(1060, 34)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 76
+   "execution_count": 48
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:50:00.911371Z",
-     "start_time": "2024-11-13T07:50:00.868587Z"
+     "end_time": "2024-11-13T17:18:38.083512Z",
+     "start_time": "2024-11-13T17:18:38.037456Z"
     }
    },
    "cell_type": "code",
@@ -1879,18 +1879,18 @@
        "</div>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 77
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:54:55.355249Z",
-     "start_time": "2024-11-13T07:54:55.348981Z"
+     "end_time": "2024-11-13T17:18:38.226453Z",
+     "start_time": "2024-11-13T17:18:38.219652Z"
     }
    },
    "cell_type": "code",
@@ -1909,13 +1909,13 @@
      ]
     }
    ],
-   "execution_count": 86
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-13T07:55:04.162654Z",
-     "start_time": "2024-11-13T07:55:04.156195Z"
+     "end_time": "2024-11-13T17:18:38.355470Z",
+     "start_time": "2024-11-13T17:18:38.349451Z"
     }
    },
    "cell_type": "code",
@@ -1928,12 +1928,134 @@
        "4.027708630013252"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 87
+   "execution_count": 51
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-13T17:18:38.493089Z",
+     "start_time": "2024-11-13T17:18:38.490137Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "558b70c894e40472",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-14T00:31:58.918560Z",
+     "start_time": "2024-11-14T00:31:58.886794Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df5[df5['countries_en'] == 'France'].describe().iloc[1,8]",
+   "id": "75ab91950d6e436f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.850279041479826"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-14T00:32:16.943449Z",
+     "start_time": "2024-11-14T00:32:16.913112Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df5[df5['countries_en'] == 'United States'].describe().iloc[1,8]",
+   "id": "568fe15d15f3fb25",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.878608756123565"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 64
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-13T19:07:48.540204Z",
+     "start_time": "2024-11-13T19:07:48.522978Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "df6 = df5[['serving_size', 'energy-kcal_100g', 'fat_100g', 'cholesterol_100g', 'carbohydrates_100g', 'sugars_100g', 'fiber_100g', 'proteins_100g', 'sodium_100g', 'vitamin-c_100g', 'vitamin-b12_100g', 'potassium_100g', 'calcium_100g', 'iron_100g']]\n",
+    "df6 = df6.fillna(df6.mean())\n",
+    "kmeans = KMeans(n_clusters=5, random_state=0, n_init=\"auto\").fit(df6)\n",
+    "kmeans.cluster_centers_"
+   ],
+   "id": "e479d263927922d1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.08679554e+01, 4.05521382e+02, 1.49506822e+01, 4.59291969e-01,\n",
+       "        5.45994029e+01, 2.39631516e+01, 4.83136015e+00, 1.26190212e+01,\n",
+       "        2.31602486e-01, 9.85827627e-03, 1.49000000e-06, 2.72055422e-01,\n",
+       "        4.24304218e+00, 1.31611636e-01],\n",
+       "       [3.74230609e+01, 4.96898416e+02, 2.42921615e+01, 2.85270592e-01,\n",
+       "        6.23479626e+01, 3.04484583e+01, 3.20895671e+00, 6.40387013e+00,\n",
+       "        2.65460940e-01, 9.25428269e-03, 1.49000000e-06, 2.89647190e-01,\n",
+       "        2.68266865e+00, 1.15709877e-01],\n",
+       "       [4.13333333e+01, 1.49333333e+03, 1.50333333e+01, 3.28298545e-01,\n",
+       "        4.54666667e+01, 1.87333333e+01, 5.60000000e+00, 1.98166667e+01,\n",
+       "        3.64333333e-01, 9.37105263e-03, 1.49000000e-06, 2.83759859e-01,\n",
+       "        3.06381543e+00, 1.18722793e-01],\n",
+       "       [6.49230769e+01, 1.98649476e+02, 9.76512238e+00, 2.48086052e-01,\n",
+       "        2.59767016e+01, 1.59633156e+01, 2.38081489e+00, 3.96111469e+00,\n",
+       "        6.68754928e-01, 8.47191296e-03, 1.49000000e-06, 2.62564491e-01,\n",
+       "        2.36680803e+00, 9.38809905e-02],\n",
+       "       [3.68357143e+02, 2.19942857e+02, 9.76928571e+00, 3.28298545e-01,\n",
+       "        2.59250000e+01, 1.20833109e+01, 2.76052062e+00, 6.72857143e+00,\n",
+       "        2.06246467e-01, 9.37105263e-03, 1.49000000e-06, 2.83759859e-01,\n",
+       "        2.65098466e+00, 1.18722793e-01]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 59
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "- Cluster #1 Serving size of 50.86g, energy-kcal_100g of 405.52g, fat_100g of 14.95g, cholesterol_100g of .45g, carbohydrates_100g of 54.599g, sugars_100g of 23.96, fiber_100g of 4.81, proteins_100g of 12.61g, sodium_100g of .23g, vitamin-c_100g of .0099g, vitamin-b12_100g of .000001g, potassium_100g of .272, calcium_100g of 4.24g, iron_100g of .132g\n",
+    "- Cluster #2 Serving size of 50.86g, energy-kcal_100g of 405.52g, fat_100g of 14.95g, cholesterol_100g of .45g, carbohydrates_100g of 54.599g, sugars_100g of 23.96, fiber_100g of 4.81, proteins_100g of 12.61g, sodium_100g of .23g, vitamin-c_100g of .0099g, vitamin-b12_100g of .000001g, potassium_100g of .272, calcium_100g of 4.24g, iron_100g of .132g\n",
+    "- Cluster #3 Serving size of 50.86g, energy-kcal_100g of 405.52g, fat_100g of 14.95g, cholesterol_100g of .45g, carbohydrates_100g of 54.599g, sugars_100g of 23.96, fiber_100g of 4.81, proteins_100g of 12.61g, sodium_100g of .23g, vitamin-c_100g of .0099g, vitamin-b12_100g of .000001g, potassium_100g of .272, calcium_100g of 4.24g, iron_100g of .132g\n",
+    "- Cluster #4 Serving size of 50.86g, energy-kcal_100g of 405.52g, fat_100g of 14.95g, cholesterol_100g of .45g, carbohydrates_100g of 54.599g, sugars_100g of 23.96, fiber_100g of 4.81, proteins_100g of 12.61g, sodium_100g of .23g, vitamin-c_100g of .0099g, vitamin-b12_100g of .000001g, potassium_100g of .272, calcium_100g of 4.24g, iron_100g of .132g\n",
+    "- Cluster #5 Serving size of 50.86g, energy-kcal_100g of 405.52g, fat_100g of 14.95g, cholesterol_100g of .45g, carbohydrates_100g of 54.599g, sugars_100g of 23.96, fiber_100g of 4.81, proteins_100g of 12.61g, sodium_100g of .23g, vitamin-c_100g of .0099g, vitamin-b12_100g of .000001g, potassium_100g of .272, calcium_100g of 4.24g, iron_100g of .132g"
+   ],
+   "id": "5033237fdecef740"
   },
   {
    "metadata": {},
@@ -1941,7 +2063,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "558b70c894e40472"
+   "id": "bcde28cf2aba11c1"
   }
  ],
  "metadata": {
