--- a/homework/hw1/hw1.ipynb
+++ b/homework/hw1/hw1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-14T01:06:13.076545Z",
-     "start_time": "2024-11-14T01:06:12.848484Z"
+     "end_time": "2024-11-14T07:19:33.989333Z",
+     "start_time": "2024-11-14T07:19:33.757908Z"
     }
    },
    "source": "!tar xvzf en.openfoodfacts.products.cookies.tar.gz",
@@ -20,13 +20,13 @@
      ]
     }
    ],
-   "execution_count": 105
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:53.590591Z",
-     "start_time": "2024-11-14T07:05:52.275278Z"
+     "end_time": "2024-11-14T07:19:34.085049Z",
+     "start_time": "2024-11-14T07:19:34.082018Z"
     }
    },
    "cell_type": "code",
@@ -36,13 +36,13 @@
    ],
    "id": "1f4e376b71efa055",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:55.212267Z",
-     "start_time": "2024-11-14T07:05:53.614604Z"
+     "end_time": "2024-11-14T07:19:35.543320Z",
+     "start_time": "2024-11-14T07:19:34.166008Z"
     }
    },
    "cell_type": "code",
@@ -63,47 +63,54 @@
     {
      "data": {
       "text/plain": [
-       "        code                                                url   creator  \\\n",
-       "0         26  http://world-en.openfoodfacts.org/product/0000...    elcoco   \n",
-       "1        146  http://world-en.openfoodfacts.org/product/0000...  labeleat   \n",
-       "2        825  http://world-en.openfoodfacts.org/product/0000...   kiliweb   \n",
-       "3  105753061  http://world-en.openfoodfacts.org/product/0000...   kiliweb   \n",
-       "4       1124  http://world-en.openfoodfacts.org/product/0000...   kiliweb   \n",
+       "        code  \\\n",
+       "0         26   \n",
+       "1        146   \n",
+       "2        825   \n",
+       "3  105753061   \n",
+       "4       1124   \n",
        "\n",
-       "    created_t      created_datetime  last_modified_t last_modified_datetime  \\\n",
-       "0  1572188426  2019-10-27T15:00:26Z       1728035294   2024-10-04T09:48:14Z   \n",
-       "1  1543780716  2018-12-02T19:58:36Z       1728036838   2024-10-04T10:13:58Z   \n",
-       "2  1576778401  2019-12-19T18:00:01Z       1576779045   2019-12-19T18:10:45Z   \n",
-       "3  1629048015  2021-08-15T17:20:15Z       1629048015   2021-08-15T17:20:15Z   \n",
-       "4  1567762460  2019-09-06T09:34:20Z       1727970340   2024-10-03T15:45:40Z   \n",
+       "                                                                                                           url  \\\n",
+       "0                         http://world-en.openfoodfacts.org/product/00000026/the-smartest-cookie-eat-different   \n",
+       "1  http://world-en.openfoodfacts.org/product/00000146/batido-nutricional-nutricional-shake-herbalife-nutrition   \n",
+       "2                                              http://world-en.openfoodfacts.org/product/00000825/cookie-vegan   \n",
+       "3                       http://world-en.openfoodfacts.org/product/0000105753061/oatmeal-chocolate-chip-cookies   \n",
+       "4             http://world-en.openfoodfacts.org/product/00001124/galettes-bretonnes-300gr-biscuiterie-le-phare   \n",
        "\n",
-       "  last_modified_by  last_updated_t last_updated_datetime  ...  \\\n",
-       "0     fix-code-bot    1.728035e+09  2024-10-04T09:48:14Z  ...   \n",
-       "1     fix-code-bot    1.728037e+09  2024-10-04T10:13:58Z  ...   \n",
-       "2       roboto-app    1.707639e+09  2024-02-11T08:06:43Z  ...   \n",
-       "3          kiliweb    1.707843e+09  2024-02-13T16:42:00Z  ...   \n",
-       "4     fix-code-bot    1.729852e+09  2024-10-25T10:27:27Z  ...   \n",
+       "    creator   created_t      created_datetime  last_modified_t  \\\n",
+       "0    elcoco  1572188426  2019-10-27T15:00:26Z       1728035294   \n",
+       "1  labeleat  1543780716  2018-12-02T19:58:36Z       1728036838   \n",
+       "2   kiliweb  1576778401  2019-12-19T18:00:01Z       1576779045   \n",
+       "3   kiliweb  1629048015  2021-08-15T17:20:15Z       1629048015   \n",
+       "4   kiliweb  1567762460  2019-09-06T09:34:20Z       1727970340   \n",
        "\n",
-       "  glycemic-index_100g water-hardness_100g choline_100g phylloquinone_100g  \\\n",
-       "0                 NaN                 NaN          NaN                NaN   \n",
-       "1                 NaN                 NaN          NaN                NaN   \n",
-       "2                 NaN                 NaN          NaN                NaN   \n",
-       "3                 NaN                 NaN          NaN                NaN   \n",
-       "4                 NaN                 NaN          NaN                NaN   \n",
+       "  last_modified_datetime last_modified_by  last_updated_t  \\\n",
+       "0   2024-10-04T09:48:14Z     fix-code-bot    1.728035e+09   \n",
+       "1   2024-10-04T10:13:58Z     fix-code-bot    1.728037e+09   \n",
+       "2   2019-12-19T18:10:45Z       roboto-app    1.707639e+09   \n",
+       "3   2021-08-15T17:20:15Z          kiliweb    1.707843e+09   \n",
+       "4   2024-10-03T15:45:40Z     fix-code-bot    1.729852e+09   \n",
        "\n",
-       "  beta-glucan_100g inositol_100g carnitine_100g sulphate_100g nitrate_100g  \\\n",
-       "0              NaN           NaN            NaN           NaN          NaN   \n",
-       "1              NaN           NaN            NaN           NaN          NaN   \n",
-       "2              NaN           NaN            NaN           NaN          NaN   \n",
-       "3              NaN           NaN            NaN           NaN          NaN   \n",
-       "4              NaN           NaN            NaN           NaN          NaN   \n",
+       "  last_updated_datetime  ... glycemic-index_100g water-hardness_100g  \\\n",
+       "0  2024-10-04T09:48:14Z  ...                 NaN                 NaN   \n",
+       "1  2024-10-04T10:13:58Z  ...                 NaN                 NaN   \n",
+       "2  2024-02-11T08:06:43Z  ...                 NaN                 NaN   \n",
+       "3  2024-02-13T16:42:00Z  ...                 NaN                 NaN   \n",
+       "4  2024-10-25T10:27:27Z  ...                 NaN                 NaN   \n",
        "\n",
-       "  acidity_100g  \n",
-       "0          NaN  \n",
-       "1          NaN  \n",
-       "2          NaN  \n",
-       "3          NaN  \n",
-       "4          NaN  \n",
+       "  choline_100g phylloquinone_100g beta-glucan_100g inositol_100g  \\\n",
+       "0          NaN                NaN              NaN           NaN   \n",
+       "1          NaN                NaN              NaN           NaN   \n",
+       "2          NaN                NaN              NaN           NaN   \n",
+       "3          NaN                NaN              NaN           NaN   \n",
+       "4          NaN                NaN              NaN           NaN   \n",
+       "\n",
+       "  carnitine_100g sulphate_100g nitrate_100g acidity_100g  \n",
+       "0            NaN           NaN          NaN          NaN  \n",
+       "1            NaN           NaN          NaN          NaN  \n",
+       "2            NaN           NaN          NaN          NaN  \n",
+       "3            NaN           NaN          NaN          NaN  \n",
+       "4            NaN           NaN          NaN          NaN  \n",
        "\n",
        "[5 rows x 206 columns]"
       ],
@@ -153,7 +160,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>26</td>\n",
-       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/00000026/the-smartest-cookie-eat-different</td>\n",
        "      <td>elcoco</td>\n",
        "      <td>1572188426</td>\n",
        "      <td>2019-10-27T15:00:26Z</td>\n",
@@ -177,7 +184,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>146</td>\n",
-       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/00000146/batido-nutricional-nutricional-shake-herbalife-nutrition</td>\n",
        "      <td>labeleat</td>\n",
        "      <td>1543780716</td>\n",
        "      <td>2018-12-02T19:58:36Z</td>\n",
@@ -201,7 +208,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>825</td>\n",
-       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/00000825/cookie-vegan</td>\n",
        "      <td>kiliweb</td>\n",
        "      <td>1576778401</td>\n",
        "      <td>2019-12-19T18:00:01Z</td>\n",
@@ -225,7 +232,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>105753061</td>\n",
-       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/0000105753061/oatmeal-chocolate-chip-cookies</td>\n",
        "      <td>kiliweb</td>\n",
        "      <td>1629048015</td>\n",
        "      <td>2021-08-15T17:20:15Z</td>\n",
@@ -249,7 +256,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1124</td>\n",
-       "      <td>http://world-en.openfoodfacts.org/product/0000...</td>\n",
+       "      <td>http://world-en.openfoodfacts.org/product/00001124/galettes-bretonnes-300gr-biscuiterie-le-phare</td>\n",
        "      <td>kiliweb</td>\n",
        "      <td>1567762460</td>\n",
        "      <td>2019-09-06T09:34:20Z</td>\n",
@@ -276,18 +283,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:55.562097Z",
-     "start_time": "2024-11-14T07:05:55.529820Z"
+     "end_time": "2024-11-14T07:19:35.716931Z",
+     "start_time": "2024-11-14T07:19:35.695214Z"
     }
    },
    "cell_type": "code",
@@ -506,18 +513,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:55.633855Z",
-     "start_time": "2024-11-14T07:05:55.609101Z"
+     "end_time": "2024-11-14T07:19:35.895120Z",
+     "start_time": "2024-11-14T07:19:35.874627Z"
     }
    },
    "cell_type": "code",
@@ -737,18 +744,18 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:55.774417Z",
-     "start_time": "2024-11-14T07:05:55.756384Z"
+     "end_time": "2024-11-14T07:19:36.249129Z",
+     "start_time": "2024-11-14T07:19:36.233724Z"
     }
    },
    "cell_type": "code",
@@ -967,18 +974,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:55.912023Z",
-     "start_time": "2024-11-14T07:05:55.896967Z"
+     "end_time": "2024-11-14T07:19:36.409218Z",
+     "start_time": "2024-11-14T07:19:36.394696Z"
     }
    },
    "cell_type": "code",
@@ -1197,31 +1204,31 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:56.566170Z",
-     "start_time": "2024-11-14T07:05:56.505493Z"
+     "end_time": "2024-11-14T07:19:36.595673Z",
+     "start_time": "2024-11-14T07:19:36.554926Z"
     }
    },
    "cell_type": "code",
    "source": "df5.to_csv(\"cookies.data-filtered.csv\")",
    "id": "10da7d8fbb640218",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:57.525956Z",
-     "start_time": "2024-11-14T07:05:56.758090Z"
+     "end_time": "2024-11-14T07:19:36.840859Z",
+     "start_time": "2024-11-14T07:19:36.732860Z"
     }
    },
    "cell_type": "code",
@@ -1237,7 +1244,7 @@
        "<Axes: xlabel='countries_en'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1252,13 +1259,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:57.635447Z",
-     "start_time": "2024-11-14T07:05:57.539482Z"
+     "end_time": "2024-11-14T07:19:36.999706Z",
+     "start_time": "2024-11-14T07:19:36.909122Z"
     }
    },
    "cell_type": "code",
@@ -1274,7 +1281,7 @@
        "<Axes: xlabel='completeness'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1289,13 +1296,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:57.687177Z",
-     "start_time": "2024-11-14T07:05:57.668571Z"
+     "end_time": "2024-11-14T07:19:37.197711Z",
+     "start_time": "2024-11-14T07:19:37.176032Z"
     }
    },
    "cell_type": "code",
@@ -1541,18 +1548,18 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:57.757266Z",
-     "start_time": "2024-11-14T07:05:57.752587Z"
+     "end_time": "2024-11-14T07:19:37.256221Z",
+     "start_time": "2024-11-14T07:19:37.251307Z"
     }
    },
    "cell_type": "code",
@@ -1565,18 +1572,18 @@
        "(1060, 34)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:57.872880Z",
-     "start_time": "2024-11-14T07:05:57.818136Z"
+     "end_time": "2024-11-14T07:19:37.365178Z",
+     "start_time": "2024-11-14T07:19:37.318033Z"
     }
    },
    "cell_type": "code",
@@ -1879,18 +1886,18 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:08:19.813995Z",
-     "start_time": "2024-11-14T07:08:19.806600Z"
+     "end_time": "2024-11-14T07:19:37.460025Z",
+     "start_time": "2024-11-14T07:19:37.453152Z"
     }
    },
    "cell_type": "code",
@@ -1909,13 +1916,13 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:08:51.763959Z",
-     "start_time": "2024-11-14T07:08:51.758451Z"
+     "end_time": "2024-11-14T07:19:37.561281Z",
+     "start_time": "2024-11-14T07:19:37.553297Z"
     }
    },
    "cell_type": "code",
@@ -1930,13 +1937,13 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:05:58.088876Z",
-     "start_time": "2024-11-14T07:05:58.072809Z"
+     "end_time": "2024-11-14T07:19:37.672543Z",
+     "start_time": "2024-11-14T07:19:37.649981Z"
     }
    },
    "cell_type": "code",
@@ -2157,18 +2164,18 @@
        "</div>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:09:35.701357Z",
-     "start_time": "2024-11-14T07:09:35.669233Z"
+     "end_time": "2024-11-14T07:19:37.800629Z",
+     "start_time": "2024-11-14T07:19:37.766190Z"
     }
    },
    "cell_type": "code",
@@ -2183,13 +2190,13 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:10:02.157141Z",
-     "start_time": "2024-11-14T07:10:02.126284Z"
+     "end_time": "2024-11-14T07:19:37.877421Z",
+     "start_time": "2024-11-14T07:19:37.845754Z"
     }
    },
    "cell_type": "code",
@@ -2204,13 +2211,13 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:06:00.555058Z",
-     "start_time": "2024-11-14T07:05:58.507327Z"
+     "end_time": "2024-11-14T07:19:38.056238Z",
+     "start_time": "2024-11-14T07:19:38.038444Z"
     }
    },
    "cell_type": "code",
@@ -2248,12 +2255,12 @@
        "        2.65098466e+00, 1.18722793e-01]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 44
   },
   {
    "metadata": {},
@@ -2270,8 +2277,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T07:06:00.642818Z",
-     "start_time": "2024-11-14T07:06:00.640507Z"
+     "end_time": "2024-11-14T07:19:38.140299Z",
+     "start_time": "2024-11-14T07:19:38.137195Z"
     }
    },
    "cell_type": "code",
@@ -2281,12 +2288,17 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-14T07:19:38.199833Z",
+     "start_time": "2024-11-14T07:19:38.196899Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "862a1db09d65e7b6"
+   "id": "862a1db09d65e7b6",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
